apps/jellyfin/components/tailscale/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: jellyfin
