apps/jellyfin/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
    tailscale.com/proxy-class: nishir-jellyfin
spec:
  ingressClassName: tailscale
